--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,36 @@ h1, h2, h3, h4, h5, p, span, strike {
   justify-content: space-around;
   align-items: flex-start;
 }
+
+#form-wrapper {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0rem;
+  border-bottom: 1px solid #e9e9e9;
+  background-color: #fff;
+  box-shadow: 0 3px 8px rgba(0,0,0,0.25);
+  padding: 40px;
+}
+
+#submit {
+  background-color: #36d9b6;
+  border-radius: 0;
+  border: 0;
+  color: #fff;
+}
+
+.flex-wrapper {
+  display: flex;
+}
+
+.task-wrapper {
+  cursor: pointer;
+  border-bottom: 1px solid #e9e9e9;
+  color: #686868;
+  margin: 5px;
+  padding: 20px;
+}
+
+.task-wrapper:hover {
+  background-color: #f0f0f0;
+}
